# pilot-controller

./: .gitignore  Dockerfile  kubectl-pilotscan  setup.cfg
deploy/: controller.yml  crd.yml
examples/: scan.yml  testpod.yml
pilot/: controller.py  scanner.py  shell.py
