[metadata]
name = pilot
version = 1.0.0
author = Craig Tracey
author-email = craigtracey@gmail.com
home-page = https://github.com/craigtracey/pilot
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

[entry_points]
console_scripts =
    pilot = pilot.shell:main

[files]
packages =
    pilot
